[package]
name = "mpad"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "A Decentralised Local Multiplayer Text Pad"
repository = "https://github.com/cetra3/mpad"
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.6"
serde_cbor = "0.10"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7.2"
socket2 = "0.3.11"
log = "0.4"
pretty_env_logger = "0.2"
difference = "2.0.0"
glib = "^0"
gio = "^0"
gtk = "^0"
base64 = "0.11.0"
num = "0.2.0"
lazy_static = "1.4.0"