[package]
name = "mpad"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "A Decentralised Local Multiplayer Text Pad"
repository = "https://github.com/cetra3/mpad"
readme = "README.md"
edition = "2018"

[dependencies]
rand = "0.7.2"
socket2 = "0.3.11"
difference = "2.0.0"
base64 = "0.11.0"
num = "0.2.0"
gio = "0.16.7"
glib = "0.16.7"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
color-eyre = "0.5"
eyre = "0.6.8"
gtk4 = "0.5.5"
automerge = "0.3.0"
