[package]
name = "mpad"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "A Decentralised Local Multiplayer Text Pad"
repository = "https://github.com/cetra3/mpad"
readme = "README.md"
edition = "2018"

[dependencies]
rand = "0.8.4"
socket2 = "0.4.7"
gio = "0.16.0"
glib = "0.16.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
gtk4 = "0.5.5"
automerge = "0.3.0"
tokio = { version = "1.25.0", features = ["full"] }
